<resources>
    <string name="app_name">Calculator Hide</string>
    <string name="name">Calculator</string>
    <string name="vault_name_cal">Calculator</string>
    <string name="view_by">View By</string>
    <string name="security">Set security question</string>
    <string name="important">Very Important</string>
    <string name="langugae">Language</string>
    <string name="block">Block Ads</string>
    <string name="icon">Disguise Icon</string>
    <string name="password">Change password</string>
    <string name="rateus">Rate Us</string>
    <string name="shareapp">Share app</string>
    <string name="recyclebin">Recycle Bin</string>
    <string name="update">Check Update</string>
    <string name="privacy">Privacy Policy</string>
    <string name="aboutus">About Us</string>
    <string name="set_security_question">Set security question</string>
    <string name="very_important">Very Important</string>
    <string name="language">Language</string>
    <string name="block_ads">Block Ads</string>
    <string name="disguise_icon">Disguise Icon</string>
    <string name="change_password">Change password</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share app</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="code">code</string>
    <string name="confirm">Confirm</string>
    <string name="file_info">File info</string>
    <string name="current_path">Current Path</string>
    <string name="original_path">Original path</string>
    <string name="added_on">Added on</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_unhide_this_file">Do you want to unhide this file ?</string>
    <string name="do_you_want_to_unhide_this_file_or_send_it_to_recycle_bin">Do you want to unhide this file or send it to recycle bin ?</string>
    <string name="unhide">Unhide</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="do_you_want_to_delete_or_restore_this_file">Do you want to delete or restore this file ?</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="Calculator">Calculator</string>

    <string name="yes">"Yes"</string>
    <string name="no"> "No"</string>
    <string name="delete"> "Delete"</string>
    <string name="restore"> "Restore"</string>
    <string name="addFromFolder"> "Add From Folder"</string>
    <string name="unhideSelected"> "Do you want to unhide the selected files"</string>
    <string name="recycleSelected"> "Do you want to send the selected files to Recycle Bin"</string>
    <string name="unhide"> "Do you want to unhide this file?"</string>
    <string name="recycle"> "Do you want to send this file to Recyle Bin?"</string>
    <string name="restore_delete"> "Do you want to delete or restore this file?"</string>
    <string name="unhide_recycle"> "Do you want to unhide this file or send it to Recycle Bin?"</string>
    <string name="unhide_text"> "Unhide"</string>
    <string name="About_Us"> "About Us"</string>
    <string name="Privacy_Policy"> "Privacy Policy"</string>
    <string name="Check_Update"> "Check Update"</string>
    <string name="Share_app"> "Share App"</string>
    <string name="Rate_Us"> "Rate Us"</string>
    <string name="rate"> "Rate this app"</string>
    <string name="rate_message"> "You like this app ? Then take a little bit of your time to leave a rating."</string>
    <string name="Very_Important"> "Very Important"</string>
    <string name="Set_security_question"> "Set security question"</string>
    <string name="Change_password"> "Change password"</string>
    <string name="files_selected"> "files selected"</string>
    <string name="deleteRecycleSelected"> "Do you want to permanently delete the selected files from Recycle Bin?"</string>
    <string name="restoreRecycleSelected"> "Do you want to restore the selected files from Recycle Bin?"</string>
    <string name="Gallery"> "Gallery"</string>
    <string name="Video"> "Video"</string>
    <string name="Audio"> "Audio"</string>
    <string name="App_Lock"> "App Lock"</string>
    <string name="Documents"> "Documents"</string>
    <string name="File_Manager"> "File Manager"</string>
    <string name="Notes"> "Notes"</string>
    <string name="Recycle_Bin"> "Recycle Bin"</string>
    <string name="Settings"> "Settings"</string>
    <string name="Disguise_Icon"> "Disguise Icon"</string>
    <string name="Gallery_label"> "Hidden Gallery"</string>
    <string name="Video_label"> "Hidden Videos"</string>
    <string name="Audio_label"> "Hidden Audios"</string>
    <string name="App_Lock_label"> "Hide Apps"</string>
    <string name="Documents_label"> "Hidden Documents"</string>
    <string name="File_Manager_label"> "Categorised Docs"</string>
    <string name="Notes_label"> "Your Notes"</string>
    <string name="Recycle_Bin_label"> "Deleted Hidden Files"</string>
    <string name="Settings_label"> "Application Settings"</string>
    <string name="Disguise_Icon_label"> "App Icon"</string>
    <string name="Set_your_security_question"> "Set your security question"</string>
    <string name="Your_old_security_question"> "Your old security question"</string>
    <string name="Select_security_question"> "Select security question>"</string>
    <string name="Enter_your_answer"> "Enter your answer"</string>
    <string name="Confirm"> "Confirm"</string>
    <string name="Skip"> "Skip"</string>
    <string name="Language"> "Language"</string>
    <string name="Imp_1"> "If you forget your password you can retrieve it by entering \"11223344\" into calculator and press \"=\" button. Then answer of your security question."</string>
    <string name="Imp_2"> "If you uninstall the calculator vault app, you need to reinstall it again. Then enter the same unlock PASSWORD to continue viewing the previous encrypted data."</string>
    <string name="Imp_3"> "The storage path for encrypted is  located in .CalculatorVault folder of  your device's root directory. Its a  hidden folder and you need to  enable the option to see hidden  files to be able to see it.  Please do not delete any files  under that folder."</string>
    <string name="Imp_4"> "Your files are stored only on  your device, so please make sure  to backup your files before factory  resetting or changing to a new  device. Do not clean any files  in our app when using clean tools."</string>
    <string name="Enter_your_Password"> "Enter your Password"</string>
    <string name="code"> "code"</string>
    <string name="Press_112"> "Press 11223344=  in the calculator page to reset password"</string>
    <string name="answer"> "answer"</string>
    <string name="Pyf"> "Pick your files"</string>
    <string name="Plaof"> "Please select atleast one file"</string>
    <string name="Hide_files"> "Hide Files"</string>
    <string name="No_files_added"> "No files added"</string>
    <string name="cancel"> "cancel"</string>
    <string name="wynh"> "write your notes here..."</string>
    <string name="Change_Icon"> "Change Icon"</string>
    <string name="SureIcon"> "Are you sure you want to change your icon?"</string>
    <string name="file_info"> "File Info"</string>
    <string name="Name"> "Name"</string>
    <string name="Current_Path"> "Current Path"</string>
    <string name="Original_Path"> "Original Path"</string>
    <string name="Added_On"> "Added On"</string>
    <string name="ConfirmPass"> "Confirm your Password"</string>
    <string name="PassNotMatch"> "Password doesn't match"</string>
    <string name="E4Pass"> "Enter 4 digit Password"</string>
    <string name="PEqual"> "Press '=' to confirm"</string>
    <string name="SetPass"> "Set Your Password"</string>
    <string name="SetPassLabel"> "Set Your password for the first time"</string>
    <string name="AboutUsMsg"> "We built the Calculator Vault app as a Free app. If You Have Any Problem Or Question Regarding This App So Before Rating 1 or 2 Stars in Play Store Please Contact us on example@gmail.com We will solve your problem as soon as possible.'"</string>
    <string name="FeedbackForm"> "Feedback Form"</string>
    <string name="Description"> "Description"</string>
    <string name="Title"> "Title"</string>
    <string name="WrongAnswer"> "Wrong Answer"</string>
    <string name="pe4dp"> "Please enter 4 Digit Password"</string>
    <string name="enp"> "Enter new Password"</string>
    <string name="Where_were_your_born"> "Where were your born?"</string>
    <string name="When_is_your_birthday"> "When is your birthday?"</string>
    <string name="Who_is_your_motherfather"> "Who is your mother/father?"</string>
    <string name="Who_is_your_brothersister"> "Who is your brother/sister?"</string>
    <string name="Who_is_your_girlfriendboyfriend"> "Who is your girlfriend/boyfriend?"</string>
    <string name="O4DA"> "Only 4 Digits Allowed"</string>
    <string name="Ads_Block"> "Ads Block"</string>
    <string name="No_Ads"> "No-ads"</string>
    <string name="turnoff"> "Turn off ads &amp; have fun while using application"</string>
    <string name="CONTINUE"> "CONTINUE"</string>

</resources>