<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cal_op_button"
    tools:context="Activity.SecurityQuesActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   <LinearLayout
       android:layout_margin="@dimen/_20sdp"
       android:gravity="center"
       app:layout_constraintTop_toBottomOf="@id/tool"
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:layout_height="match_parent">
       <TextView
           android:text="@string/enter_your_password"
           android:layout_width="match_parent"
           android:gravity="center"
           android:textColor="@color/white"
           android:layout_height="wrap_content"/>
       <EditText
           android:layout_marginTop="@dimen/_12sdp"
           android:hint="@string/code"
           android:padding="@dimen/_12sdp"
           android:textColor="@color/white"
           android:textColorHint="@color/line_color"
           android:background="@drawable/edt_back"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <androidx.appcompat.widget.AppCompatButton
           android:layout_width="wrap_content"
           android:text="@string/confirm"
           android:elevation="@dimen/_6sdp"
           android:paddingLeft="@dimen/_40sdp"
           android:paddingRight="@dimen/_40sdp"
           android:textColor="@color/white"
           android:textAllCaps="false"
           android:fontFamily="@font/varelaroundregular"
           android:layout_gravity="center"
           android:layout_marginTop="@dimen/_20sdp"
           android:background="@color/line_color"
           android:layout_height="wrap_content"/>

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>