<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/home_item"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/maintext"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:textSize="16sp"
            android:singleLine="true"
            android:fontFamily="@font/varelaroundregular"
            android:text="@string/do_you_want_to_unhide_this_file_or_send_it_to_recycle_bin"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_margin="@dimen/_12sdp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvUnHide"
                android:layout_width="wrap_content"
                android:text="@string/unhide"
                android:fontFamily="@font/varelaroundregular"
                android:layout_margin="@dimen/_12sdp"
                android:textSize="16sp"
                android:singleLine="true"
                android:textColor="@color/cal_blue"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvRecycleBin"
                android:layout_width="wrap_content"
                android:text="@string/recycle_bin"
                android:layout_margin="@dimen/_12sdp"
                android:textSize="16sp"
                android:singleLine="true"
                android:fontFamily="@font/varelaroundregular"
                android:textColor="@color/cal_blue"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>