<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cal_display"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/file_info"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/current_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvCurentPath"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="@string/original_path"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvOrPath"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/added_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:textColor="@color/white"
                android:id="@+id/tvAddedOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="OK"
            android:textSize="@dimen/_15sdp"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>