<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".Activity.SettingActivity">


    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_7sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/back">

        </ImageView>

        <TextView
            android:id="@+id/searchtext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="Settings"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/security_question">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/very_important">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/important"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/language">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/langugae"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/block_ads">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/block"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/disguise">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/chnage_password">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/rate_us">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rateus"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/share">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shareapp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/recycle_bin">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recyclebin"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/update">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/privacy_policy">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9F9D9D">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:src="@drawable/about">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>